--- a/app/src/main/res/layout/itemactivity_main.xml
+++ b/app/src/main/res/layout/itemactivity_main.xml
@@ -64,6 +64,6 @@
         android:text="Save New Item"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:id="@+id/saveButton" />
+        android:id="@+id/saveNewItemButton" />
 
 </LinearLayout>
