--- a/app/src/main/res/layout/item_bucket.xml
+++ b/app/src/main/res/layout/item_bucket.xml
@@ -6,7 +6,8 @@
     <CheckBox
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/checkBox" />
+        android:id="@+id/checkBox"
+        android:onClick="reorder"/>
 
     <LinearLayout
         android:orientation="vertical"
